# ontorag-flow

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.ko.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  security-deps.yml
docs/: index.ko.md  index.md  operations.ko.md  operations.md  operator-guide.ko.md  operator-guide.md  philosophy.ko.md  philosophy.md  security.ko.md  security.md
docs/how-to/: docker.md  engines.md  ontorag.md
docs/reference/: actions.md  api.md  cli.md  configuration.md  engines.md  python-api.md
docs/tutorials/: action-plugin.md  authoring-process.md  first-case.md
examples/bayesian_demo/: process.yaml
examples/medical_triage/: README.md  process.yaml  run_demo.py
examples/patent_board_sre/: README.md  process.yaml  record_incident.py
examples/supply_chain_rca/: README.md  actions.py  process.yaml  run_demo.py  run_demo_llm.py
src/ontorag_flow/: __init__.py  cli.py  config.py  log.py
src/ontorag_flow/actions/: __init__.py  case_state.py  human.py  triples.py
src/ontorag_flow/api/: __init__.py  deps.py  main.py
src/ontorag_flow/api/routes/: __init__.py  actions.py  audit.py  cases.py  health.py  processes.py
src/ontorag_flow/core/: __init__.py  action.py  audit.py  case.py  case_manager.py  executor.py  process.py  process_rdf.py  provenance.py  registry.py  state.py
src/ontorag_flow/engines/: __init__.py  _posteriors.py  base.py  bayesian.py  cascade.py  causal.py  human.py  llm_agent.py  llm_providers.py  memory_adapter.py  rule.py  selection.py  wiring.py
src/ontorag_flow/ontorag_client/: __init__.py  client.py  tools.py
src/ontorag_flow/stores/: __init__.py  base.py  postgres.py  sqlite.py
src/ontorag_flow/ui/: __init__.py  routes.py
src/ontorag_flow/ui/static/: app.css
src/ontorag_flow/ui/templates/: actions.html  audit.html  base.html  case_detail.html  counterfactual.html  dashboard.html  explain.html  process_detail.html  process_diagram.html  processes.html
tests/: _mcp_fixture.py  conftest.py  test_action.py  test_api.py  test_api_audit.py  test_api_audit_aggregate.py  test_api_audit_prune.py  test_api_cases.py  test_api_ui.py  test_api_v07.py  test_assert_triple_integration.py  test_audit.py  test_audit_retention.py  test_bayesian_engine.py  test_cascade_engine.py  test_case.py  test_case_manager.py  test_causal_engine.py  test_cli_process_simulate.py  test_cli_process_test.py  test_counterfactual_manager.py  test_e2e_scenario.py  test_engine_explain.py  test_engine_resolver.py  test_engines_wiring.py  test_executor.py  test_llm_agent_engine.py  test_llm_providers.py  test_ontorag_client.py  test_ontorag_client_integration.py  test_ontorag_client_tools.py  test_postgres_store.py  test_postgres_store_integration.py  test_postgres_store_unit.py  test_process.py  test_process_rdf.py  test_process_validation.py  test_provenance.py  test_registry_plugins.py  test_rule_engine.py  (+5 more)
