[project]
name = "ontorag-flow"
version = "0.1.0"
description = "Ontology-aware orchestration & Adaptive Case Management framework — the Kinetic layer over ontorag."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ontorag-flow contributors" }]
keywords = ["ontology", "owl", "workflow", "case-management", "mcp", "prov-o"]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "fastapi>=0.111",
    "fastapi-mcp>=0.3",
    "mcp>=1.2",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "rdflib>=7.6.0",
    "jinja2>=3.1",
]

[project.scripts]
ontorag-flow = "ontorag_flow.cli:app"

[project.optional-dependencies]
# LLM provider SDKs for LlmAgentEngine (anthropic/openai). Ollama is reached
# over its REST API with the already-present httpx, so it needs no SDK here.
llm = [
    "anthropic>=0.40",
    "openai>=1.50",
]
# Production persistence backend.
postgres = [
    "asyncpg>=0.29",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ontorag_flow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["ontorag_flow"]
branch = true
